fix branching problem and upload CV.tex

--- a/CV.tex
+++ b/CV.tex
@@ -248,22 +248,29 @@ Current projects and other on-going information would be updated at  \href{https
 	{}
 
 \section{Schedule and Future prospect}
-Oriented from my thesis study of Metamaterials,  the most recent future career for me would be toward some key words around coating device, LED, radio detector, Lidar, and maybe a less prominent featured transistors and the likes, yet still a few steps before entering design level. I want to pursue a Career life beyond Equipment Engineers, Process Engineer, but before a successful sidetracking, I think I need a solid proof of work for process engineering skill.
+- Prepare for upcoming entrance exam of another master program under college of EE, CS or EECS,   supposedly took place in Feb 2024. Pursue a Ph. D. degree onward if I acquire or to be assigned for a promising sector of topic. 
+
+- Or anything, any activities equivalent to the experience and training I could receive by being admitted into an academic school.
+
+
 
 \subsection{Short/Mid term programs in the brew}
 
+\vspace{2mm}
+
 - Become self-sustaining economically.
 
-\vspace{1.2mm}
+\vspace{2mm}
 
 - College Open Courses (OCW) taken : Digital System Design, Operating System, Data Structure, Algorithm, Computer Organization/Architecture, Discrete Mathematics, VLSI. 
 
-\vspace{1.2mm}
+\vspace{2mm}
 
-- Afterwards, I intend sharpen programing skills, conquer the iclab sessions and some divings into Operating System Design and Implementation (OSDI) or take online courses from NCKU for Linux Kernel, 
-\vspace{1.2mm}
+- Conquer Iclab sessions and home works of NCTU which is primarily composed of Data Structure challenges, 
 
-- For past time, recover field theory from Klein-Gordan equation to Dirac Equation and to beyong.
+\vspace{2mm}
+
+- 
 
 
 
